--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.8.3",
     "vue": "^2.7.16",
+    "vue-carousel": "^0.18.0",
     "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.6.5"
   },
