--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^2.7.16",
     "vue-carousel": "^0.18.0",
